# nexus-care-ai

./: .env.example  .gitignore  .trivyignore  ARCHITECTURE.md  CONTRIBUTING.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-staging.yml
apps/: README.md
apps/web/: .gitignore  README.md  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  tsconfig.json
apps/web/src/: placeholder.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/dashboard/: layout.tsx  page.tsx
apps/web/src/app/dashboard/medications/: page.tsx
apps/web/src/app/dashboard/residents/: page.tsx
apps/web/src/app/dashboard/residents/[id]/: page.tsx
apps/web/src/app/dashboard/residents/new/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/components/login/: facility-code-step.tsx  pin-display.tsx  pin-keypad.tsx  pin-step.tsx
apps/web/src/components/residents/: resident-card.tsx  resident-table.tsx
apps/web/src/components/ui/: button.tsx  card.tsx  input.tsx  logo.tsx  status-badge.tsx
apps/web/src/hooks/: use-auth.ts
apps/web/src/lib/: api.ts  auth-store.ts  cn.ts
apps/web/src/providers/: query-provider.tsx
apps/web/tests/e2e/: login.spec.ts
db/: README.md  pyproject.toml
db/alembic/: env.py
db/alembic/versions/: 0001_initial_schema.py  0002_platform_admins.py  0003_clinical_phase_1.py
db/src/nexus_care_db/: __init__.py  base.py  session.py
db/src/nexus_care_db/clinical/: __init__.py  medication_orders.py  medications.py  residents.py
db/src/nexus_care_db/platform/: __init__.py  feature_flags.py  platform_admins.py  tenants.py  users.py
db/src/nexus_care_db/tenant_data/: __init__.py  audit_log.py
docs/adr/: 0000-template.md  0001-initial-stack-and-architecture.md  README.md
docs/migration/: README.md  feature-matrix.md
docs/runbooks/: README.md  deploy-staging.md  local-dev.md
infra/: README.md
infra/docker/: backend-entrypoint.sh  backend.Dockerfile  frontend.Dockerfile
infra/helm/nexus-care/: .helmignore  Chart.yaml  values-gke-staging.yaml  values.yaml
infra/helm/nexus-care/templates/: NOTES.txt  _helpers.tpl  api-deployment.yaml  ingress.yaml  migrate-job.yaml  platform-deployment.yaml  serviceaccount.yaml  web-deployment.yaml
scripts/: README.md  bootstrap_platform_admin.py  seed_clinical_demo.py  seed_sandbox.py
services/: README.md
services/api/: pyproject.toml
services/api/src/nexus_care_api/: __init__.py  app.py  deps.py  settings.py
services/api/src/nexus_care_api/routes/: __init__.py  auth.py  health.py  tenant_lifecycle.py
services/api/src/nexus_care_api/routes/clinical/: __init__.py  _audit.py  medication_orders.py  medications.py  residents.py
services/platform/: pyproject.toml
services/platform/src/nexus_care_platform/: __init__.py  app.py  deps.py  settings.py
services/platform/src/nexus_care_platform/routes/: __init__.py  auth.py  feature_flags.py  health.py  tenants.py
tests/: README.md
tests/integration/: test_auth_and_isolation.py  test_clinical.py  test_platform_bright_line.py
