[project]
name = "nexus-care-ai"
version = "0.1.0"
description = "AI-native EHR for Post-Acute and Long-Term Care."
requires-python = ">=3.13,<3.14"
readme = "README.md"
license = { text = "Proprietary" }

# Top-level project depends on the internal services and packages.
# Each is a uv workspace member with its own pyproject.toml.
dependencies = [
    "nexus-care-api",
    "nexus-care-platform",
    "nexus-care-db",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-passlib",
]

# ---------------------------------------------------------------------------
# uv workspace
# ---------------------------------------------------------------------------
# Each Python service / package is its own uv workspace member. They share
# the same lockfile (uv.lock) and virtual environment (.venv) but have their
# own pyproject.toml so deps are scoped tightly per service.
[tool.uv.workspace]
members = [
    "services/api",
    "services/platform",
    "db",
]

# Resolve internal workspace deps locally instead of from PyPI.
[tool.uv.sources]
nexus-care-api = { workspace = true }
nexus-care-platform = { workspace = true }
nexus-care-db = { workspace = true }

# ---------------------------------------------------------------------------
# Ruff — single tool replacing black, isort, flake8, pyupgrade
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = [
    "db/alembic/versions",  # generated migration files
    ".venv",
]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "S",             # bandit (security)
    "N",             # pep8-naming
    "RUF",           # ruff-specific
    "PT",            # pytest-style
    "SIM",           # simplify
    "TID",           # tidy imports
]
ignore = [
    "E501",  # line too long — formatter handles this
    "S101",  # assert is fine in tests
    "S104",  # binding to all interfaces is fine in containers
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "N", "B"]
"db/alembic/env.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["services/api/tests", "services/platform/tests", "tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov-report=term-missing",
]
asyncio_mode = "auto"
markers = [
    "integration: integration tests that require Postgres",
    "e2e: end-to-end tests that require the full stack",
    "slow: tests that take more than ~1s",
]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_decorators = true
exclude = ["db/alembic/versions"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
