[project]
name = "nexus-care-db"
version = "0.1.0"
description = "Shared SQLAlchemy schema, Alembic migrations, and seed data."
requires-python = ">=3.13,<3.14"
dependencies = [
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nexus_care_db"]
