[project]
name = "nexus-care-api"
version = "0.1.0"
description = "Clinical + AI API for Nexus Care AI."
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi[standard]>=0.136.1,<0.137",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.14.0",
    "argon2-cffi>=23.1.0",
    "pyjwt>=2.10.0",
    "python-multipart>=0.0.20",
    "slowapi>=0.1.9",
    "google-genai>=1.46.0",
    "httpx>=0.27.0",
    "structlog>=24.4.0",
    "nexus-care-db",
    "nexus-care-tenancy",
    "nexus-care-auth",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nexus_care_api"]
